Finish add_two_ints server and client

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,13 +9,15 @@ find_package(catkin REQUIRED COMPONENTS
 )
 
  add_message_files(
-   FILES
-   Num.msg
+    FILES
+    Num.msg
+    TwoInts.msg
  )
 
  add_service_files(
    FILES
    AddTwoInts.srv
+   AddTwo.srv
  )
 
  generate_messages(
@@ -40,6 +42,13 @@ add_executable(listener src/listener.cpp)
 target_link_libraries(listener ${catkin_LIBRARIES})
 add_dependencies(listener beginner_tutorials_generate_messages_cpp)
 
+add_executable(add_two_ints_server src/add_two_ints_server.cpp)
+target_link_libraries(add_two_ints_server ${catkin_LIBRARIES})
+add_dependencies(add_two_ints_server beginner_tutorials_generate_messages_cpp)
+
+add_executable(add_two_ints_client src/add_two_ints_client.cpp)
+target_link_libraries(add_two_ints_client ${catkin_LIBRARIES})
+add_dependencies(add_two_ints_client beginner_tutorials_generate_messages_cpp)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
